--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/virtual-store.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/virtual-store.component.html
@@ -24,7 +24,7 @@
             <img src="{{virtualStore.screenShotFileName}}" class="item-img" />
         </a>
         <div class="img-tag">
-            <h3>{{virtualStore.price}}$</h3>
+            <h3>{{virtualStore.price|currency:'USD':true}}</h3>
             <div>{{virtualStore.title}}</div>
         </div>
     </div>
