--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/edit-profile/preview-image.component.html
@@ -45,6 +45,9 @@
     .modal-overlay {
         top: -209px;
     }
+    .modal-image{
+        overflow:scroll;
+    }
 
     @media only screen and (max-width:1000px) {
         .modal-overlay {
@@ -56,7 +59,7 @@
     }
 </style>
 
-<div class="modal-overlay z-modal" id="dialogModal" (click)="handleClick($event)">
+<div class="modal-overlay z-modal modal-image" id="dialogModal" (click)="handleClick($event)">
     <div class="modal-content credential-dialog">
         <div class="exit-button" (click)="onClickedExit()">x</div>
         <div class="modal-container">
