--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/virtual-store.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/virtual-store/virtual-store.component.html
@@ -16,16 +16,24 @@
         width: 150px;
         margin: 2px auto;
     }
+
+    .empty-message {
+        font-size: 18px;
+        padding: 3% 15% 0 15%;
+    }
 </style>
 <div #itemDialog></div>
-<div class="row">
+<div *ngIf="virtualStores?.length>0" class="row">
     <div class="col-md-4" *ngFor="let virtualStore of virtualStores">
         <a class="item-list" (click)="openItemDialogAnchor(virtualStore)">
             <img src="{{virtualStore.screenShotFileName}}" class="item-img" />
         </a>
         <div class="img-tag">
-            <h3>{{virtualStore.price|currency:'USD':true}}</h3>
+            <h3>{{virtualStore.price|currency:'USD':true:'1.3-3'}}</h3>
             <div>{{virtualStore.title}}</div>
         </div>
     </div>
+</div>
+<div *ngIf="virtualStores?.length<1" class="row">
+    <div class="empty-message">{{emptyMessage}}</div>
 </div>
