--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -46,10 +46,7 @@
     }
     
 </style>
-
-
 <nav-bar></nav-bar>
-
 <div>
     <!--<div #credentialDialogAnchor></div>-->
     <div #employmentDialogAnchor></div>
@@ -61,7 +58,7 @@
 
     <div  *ngIf="isOwner && credential">
         <div *ngIf="!credential.id" class="alert alert-danger center-width">
-            Please add first name and last name to start.
+            Por favor actualiza tu nombre y apellido.
         </div>
     </div>
     <div class="col-md-9">
