Authentication  UI design changed and fixed as before

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Login.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Login.cshtml
@@ -8,82 +8,83 @@
     ViewData["Title"] = "Log in";
 }
 
-<h2>@ViewData["Title"].</h2>
+<style>
+    .form-horizontal {
+        border-radius: 10px;
+        height: 355px;
+    }
+
+    .login-header {
+        text-align: center;
+        margin-bottom: 26px;
+        color: #5491c6;
+        font-size: 21px;
+    }
+
+    .form-control {
+        background-color: #cccccc;
+        height: 41px;
+        border-radius: 7px;
+    }
+
+    .btn-default {
+        background-color: #fba409;
+        border-radius: 10px;
+        height: 45px;
+        font-size: 21px;
+        min-width: 174px;
+    }
+
+    .forget-password {
+        margin-left: 4px;
+    }
+
+    .sign-up {
+        text-align: center;
+    }
+</style>
 <div class="row">
-    <div class="col-md-8">
+
+    <div class="col-md-4 col-md-offset-4 loginForm">
+
         <section>
+
             <form asp-controller="Account" asp-action="Login" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="sign-up">@*Don't have an account?*@ ¿Aún no estás registrado?  <a href="/Account/Register">@*Sign up here*@Regístrate aquí</a></div>
+                <h2 class="login-header">
+                    @*Log in*@Iniciar sesión
+                </h2>
                 <div class="form-group">
-                    <label asp-for="Email" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Email" class="form-control" />
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Email" placeholder="Ingresa tu correo electrónico" class="form-control" id="email" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password" class="col-md-2 control-label"></label>
-                    <div class="col-md-10">
-                        <input asp-for="Password" class="form-control" />
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Password" placeholder="Contraseña" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <div class="checkbox">
-                            <input asp-for="RememberMe" />
-                            <label asp-for="RememberMe"></label>
-                        </div>
+                    <div class="col-sm-offset-1 col-md-10">
+                        <button type="submit" class="btn btn-default">@*Log in*@Iniciar sesión</button>
                     </div>
                 </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <button type="submit" class="btn btn-default">Log in</button>
-                    </div>
-                </div>
-                <p>
-                    <a asp-action="Register" asp-route-returnUrl="@ViewData["ReturnUrl"]">Register as a new user?</a>
-                </p>
-                <p>
-                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                <p class="col-sm-offset-1">
+                    <a asp-action="ForgotPassword" class="forget-password">@*Forgot password?*@¿Olvidaste tu contraseña?</a>
                 </p>
             </form>
         </section>
     </div>
-    <div class="col-md-4">
-        <section>
-            <h4>Use another service to log in.</h4>
-            <hr />
-            @{
-                var loginProviders = SignInManager.GetExternalAuthenticationSchemes().ToList();
-                if (loginProviders.Count == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="http://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form asp-controller="Account" asp-action="ExternalLogin" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
-                        <div>
-                            <p>
-                                @foreach (var provider in loginProviders)
-                                {
-                                    <button type="submit" class="btn btn-default" name="provider" value="@provider.AuthenticationScheme" title="Log in using your @provider.DisplayName account">@provider.AuthenticationScheme</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+    <div class="col-md-3">
     </div>
 </div>
+<script>
+    window.setTimeout(function () {
+        document.getElementById('email').focus();
+    }, 0);
+</script>
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
