--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPassword.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPassword.cshtml
@@ -5,35 +5,50 @@
 
 <h2>@ViewData["Title"].</h2>
 
-<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal" role="form">
-    <h4>Reset your password.</h4>
+<style>
+    .form-control {
+        width: 346px;
+    }
+
+    .form-horizontal {
+        height: 386px;
+    }
+</style>
+<h2>@ViewData["Title"].</h2>
+
+<form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal col-md-6 col-md-offset-3" role="form">
+    @*<h4>Reset your password.</h4>*@
+    <h4>Reestablece tu contraseña</h4>
     <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
+    @*<div asp-validation-summary="All" class="text-danger"></div>*@
     <input asp-for="Code" type="hidden" />
     <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        @*<label asp-for="Email" class="col-md-2 control-label"></label>*@
+        <label class="col-md-4 control-label">Correo electrónico</label>
+        <div class="col-md-8">
             <input asp-for="Email" class="form-control" />
             <span asp-validation-for="Email" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        @*<label asp-for="Password" class="col-md-2 control-label"></label>*@
+        <label class="col-md-4 control-label">Nueva contraseña</label>
+        <div class="col-md-8">
             <input asp-for="Password" class="form-control" />
             <span asp-validation-for="Password" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
+        @*<label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>*@
+        <label class="col-md-4 control-label">Confirma tu contraseña</label>
+        <div class="col-md-8">
             <input asp-for="ConfirmPassword" class="form-control" />
             <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Reset</button>
+            <button type="submit" class="btn btn-default">@*Reset*@Enviar</button>
         </div>
     </div>
 </form>
