--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Reset password confirmation";
 }
+<div class="col-md-6 col-md-offset-3">
+    <form class="form-horizontal" role="form">
+        <h1>@ViewData["Title"].</h1>
+        <hr />
+        <div class="form-group">
+            <div class="col-md-10">
+                Your password has been reset. Please <a href="http://altap.azurewebsites.net/">Click here to log in</a>.
+            </div>
 
-<h1>@ViewData["Title"].</h1>
-<p>
-    Your password has been reset. Please <a asp-controller="Account" asp-action="Login">Click here to log in</a>.
-</p>
+        </div>
+    </form>
+</div>
