--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,8 +1,18 @@
 ﻿@{
     ViewData["Title"] = "Forgot Password Confirmation";
 }
+<div class="col-md-6 col-md-offset-3">
+    <form class="form-horizontal" role="form">
+        <h1>@ViewData["Title"].</h1>
+        <hr />
+        <div class="form-group">
+            <div class="col-md-10">
+                <p>
+                    @*Please check your email to reset your password.*@
+                    Revisa tu correo electrónico para reestablecer tu contraseña
+                </p>
+            </div>
 
-<h2>@ViewData["Title"].</h2>
-<p>
-    Please check your email to reset your password.
-</p>
+        </div>
+    </form>
+</div>
