--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
@@ -3,39 +3,99 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>@ViewData["Title"].</h2>
+<style>
+    .form-horizontal {
+        border-radius: 10px;
+        height: 377px;
+        margin-top: 4px;
+        margin-right: 29px;
+    }
 
-<form asp-controller="Account" asp-action="Register" asp-route-returnUrl="@ViewData["returnUrl"]" method="post" class="form-horizontal" role="form">
-    <h4>Create a new account.</h4>
-    <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="form-group">
-        <label asp-for="Email" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Email" class="form-control" />
-            <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
+    .login-header {
+        text-align: center;
+        margin-bottom: 26px;
+        color: #5491c6;
+        font-size: 21px;
+        margin-left: -100px;
+    }
+
+
+
+    .btn-default {
+        background-color: #fba409;
+        border-radius: 10px;
+        height: 45px;
+        font-size: 21px;
+        min-width: 174px;
+    }
+
+    .forget-password {
+        margin-left: 4px;
+    }
+</style>
+
+<div class="row">
+    <div class="col-md-4">
+        @*<img class="left-border" src="~/images/border.png" />*@
+        .
     </div>
-    <div class="form-group">
-        <label asp-for="Password" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="Password" class="form-control" />
-            <span asp-validation-for="Password" class="text-danger"></span>
-        </div>
+    <div class="col-md-4 registrationForm">
+
+        <section>
+
+            <form asp-controller="Account" asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="form-horizontal" role="form">
+                <h2 class="login-header">
+                    @*Sign Up*@Regístrate
+                </h2>
+                @*<div asp-validation-summary="All" class="text-danger"></div>*@
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Email" placeholder="Correo electrónico" class="form-control" id="email" />
+                        <span asp-validation-for="Email" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="Password" placeholder="Contraseña" class="form-control" />
+                        <span asp-validation-for="Password" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <input asp-for="ConfirmPassword" placeholder="Confirma tu contraseña" class="form-control" />
+                        <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-8">
+                        <input type="checkbox" id="accept" onclick="acceptTerms()" />
+                        @*Accept Terms and conditions*@
+                        Acepto y he leído los <a href="http://altaperspectiva.com/terminosdeuso" target="_blank">Términos y condiciones de uso</a> y <a href="http://altaperspectiva.com/politicasdeprivacidad" target="_blank">Politicas de privacidad</a>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-1 col-md-10">
+                        <button type="submit" class="btn btn-xm" id="register" disabled>@*Sign Up*@Regístrate</button>
+                    </div>
+                </div>
+            </form>
+        </section>
     </div>
-    <div class="form-group">
-        <label asp-for="ConfirmPassword" class="col-md-2 control-label"></label>
-        <div class="col-md-10">
-            <input asp-for="ConfirmPassword" class="form-control" />
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
-        </div>
+    <div class="col-md-3">
     </div>
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <button type="submit" class="btn btn-default">Register</button>
-        </div>
-    </div>
-</form>
+</div>
+<script>
+    function acceptTerms() {
+        if (document.getElementById("accept").checked) {
+            document.getElementById("register").disabled = false;
+        }
+        else
+            document.getElementById("register").disabled = true;
+    }
+    window.setTimeout(function () {
+        document.getElementById('email').focus();
+    }, 0);
+</script>
 
 @section Scripts {
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
