Authentication module fixed as previous one, email send on registration issue fixed

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Forgot Password Confirmation";
+    ViewData["Title"] = "Reestablecer contraseña";
 }
 <div class="col-md-6 col-md-offset-3">
     <form class="form-horizontal" role="form">
