--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
         <title>@ViewData["Title"] - AuthorizationServer</title>
 
         <environment names="Development">
+            <link href="~/css/alta-font/alta-fonts.css" rel="stylesheet" />
             <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
             <link rel="stylesheet" href="~/lib/bootstrap-touch-carousel/dist/css/bootstrap-touch-carousel.css" />
             <link rel="stylesheet" href="~/css/site.css" />
@@ -17,7 +18,8 @@
             <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap-touch-carousel/0.8.0/css/bootstrap-touch-carousel.css"
                   asp-fallback-href="~/lib/bootstrap-touch-carousel/css/bootstrap-touch-carousel.css"
                   asp-fallback-test-class="carousel-caption" asp-fallback-test-property="display" asp-fallback-test-value="none" />
-            <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+            <link href="~/css/alta-font/alta-fonts.css" rel="stylesheet" />
+            <link rel="stylesheet" href="~/css/site.css" />
         </environment>
         <style>
             .nav-shadow {
