--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
@@ -7,7 +7,7 @@
         <hr />
         <div class="form-group">
             <div class="col-md-10">
-                Your password has been reset. Please <a href="http://altap.azurewebsites.net/">Click here to log in</a>.
+                Your password has been reset. Please <a href="http://www.altaperspectiva.com/">Click here to log in</a>.
             </div>
 
         </div>
