License URL changed, Authentication  icon changed, azure URL changed to altaperspectiva.

--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/Register.cshtml
@@ -70,7 +70,7 @@
                     <div class="col-sm-offset-1 col-md-8">
                         <input type="checkbox" id="accept" onclick="acceptTerms()" />
                         @*Accept Terms and conditions*@
-                        Acepto y he leído los <a href="http://altaperspectiva.com/terminosdeuso" target="_blank">Términos y condiciones de uso</a> y <a href="http://altaperspectiva.com/politicasdeprivacidad" target="_blank">Politicas de privacidad</a>
+                        Acepto y he leído los <a href="http://altaperspectiva.com/conocemas/terminos-de-uso/" target="_blank">Términos y condiciones de uso</a> y <a href="http://altaperspectiva.com/conocemas/politicas-de-privacidad/" target="_blank">Politicas de privacidad</a>
                     </div>
                 </div>
                 <div class="form-group">
