URL changed on footer

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Home/Index.cshtml
@@ -54,8 +54,8 @@ else
         </div>
         <div class="col-md-4 col-md-pull-4 footer-left "><span><i class="fa fa-envelope"></i> &nbsp;&nbsp; info@altaperspectiva.com </span> </div>
         <div class="col-md-4 footer-right">
-            <div><a href="http://altaperspectiva.com/terminosdeuso">Términos de uso</a> </div>
-            <div><a href="http://altaperspectiva.com/politicasdeprivacidad">Políticas de privacidad</a></div>
+            <div><a href="http://altaperspectiva.com/conocemas/terminos-de-uso/">Términos de uso</a> </div>
+            <div><a href="http://altaperspectiva.com/conocemas/politicas-de-privacidad/">Políticas de privacidad</a></div>
         </div>
     </div>
 </div>
