nav bar added to home component

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 ﻿<div class="navbar navbar-inverse navbar-fixed-top z-header nav-shadow" [ngClass]="className">
-    <ap-search placeBottom="top-fixed"></ap-search>
+    <ap-search placeBottom="top-fixed" *ngIf="!hideSearch"></ap-search>
     <div class="navbar-header">
         <div asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand logo">
             <a routerLink="/"><img class="navbar-brand logo" src="../images/LOGO CUADRADO.png" /></a>
@@ -10,6 +10,8 @@
             <li class="nav-home"><a routerLink="/">Alta Perspectiva</a></li>
             <li><a routerLink="/question/home/1"><!--Questions-->Responder</a></li>
         </ul>
+        <span>{{_logObj.isLoggedIn}}</span>
+        
         <ul class="nav navbar-nav navbar-right" *ngIf="!_logObj.isLoggedIn">
             <li><a href="/signin">Iniciar sesión <!--Log in--></a></li>
             <li><a href="/signin">Regístrate <!--Register--></a></li>
@@ -17,6 +19,7 @@
         <div class="nav navbar-right" *ngIf="_logObj.isLoggedIn">
             <a href="#" class="dropdown-toggle fixed-height" data-toggle="dropdown" aria-expanded="false">
                 <img class="user-image img-circle" src="{{_logObj.user.imageUrl}}" />
+                
                 <span class="nav-user-info">{{_logObj.user.name}}</span>
             </a>
             <!-- ======= -->
