--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/core/home.component.html
@@ -10,7 +10,7 @@
 </style>
 <div class="banner-container z-banner">
     <ap-banner></ap-banner>
-    <ap-nav></ap-nav>
+    <nav-bar hideSearch="true"></nav-bar>
     <ap-search placeBottom="bottom-float"></ap-search>
 </div>
 <div>
