--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,20 @@
 ﻿<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8" />
+<head prefix="og: http://ogp.me/ns#">
+    <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="altaperspectiva.com" />
+    <meta property="og:title" content="Alta Perspectiva" />
+    <meta property="og:description" content="Alta Perspectiva" />
+    <meta property="og:url" content="http://www.altaperspectiva.com/home/tab/1" />
+
+    <meta property="og:image" content="https://altablob.blob.core.windows.net:443/caetgory/altaperspectiva-logo.png" />
+    <meta property="og:image:type" content="png">
+    <meta property="og:image:width" content="786">
+    <meta property="og:image:height" content="600">
+    <meta property="fb:app_id" content="663076630563421">
     <title>iHaz tu preguntas sobre negocios!</title>
 
     @*<script src="~/js/main.js"></script>*@
