--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPassword.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ResetPasswordViewModel
 @{
-    ViewData["Title"] = "Reset password";
+    ViewData["Title"] = "Restablecer la contraseña";
 }
 
 <h2>@ViewData["Title"].</h2>
@@ -14,8 +14,6 @@
         height: 386px;
     }
 </style>
-<h2>@ViewData["Title"].</h2>
-
 <form asp-controller="Account" asp-action="ResetPassword" method="post" class="form-horizontal col-md-6 col-md-offset-3" role="form">
     @*<h4>Reset your password.</h4>*@
     <h4>Reestablece tu contraseña</h4>
