--- a/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/AltaAuthentication/AltaAuthentication/AuthorizationServer/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Restablecer la confirmación de contraseña";
 }
 <div class="col-md-6 col-md-offset-3">
     <form class="form-horizontal" role="form">
@@ -7,7 +7,7 @@
         <hr />
         <div class="form-group">
             <div class="col-md-10">
-                Your password has been reset. Please <a href="http://www.altaperspectiva.com/">Click here to log in</a>.
+                Tu contraseña ha sido restablecida. Por favor <a href="http://www.altaperspectiva.com/">Haga clic aquí para ingresar</a>.
             </div>
 
         </div>
