dash board : show loader on question and answer loading

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/follower/follower.component.html
@@ -4,6 +4,9 @@
     }
     
 </style>
+<div class="modal-overlay-inside z-modal" *ngIf="isLoading">
+    <div class="loader"></div>
+</div>
 <div class="row row-fix ">
     <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
         <user-info [userObj]="usr"></user-info>
