--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-question/user-question.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/user-question/user-question.component.html
@@ -1,3 +1,6 @@
-﻿<div *ngFor="let question of questions">
+﻿<div class="modal-overlay-inside z-modal" *ngIf="isLoading">
+    <div class="loader"></div>
+</div>
+<div *ngFor="let question of questions">
     <question-panel [question]="question"></question-panel>
 </div>
