--- a/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/modal.less
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/Styles/site/modal.less
@@ -16,3 +16,12 @@
     font-size: 30px;
     color: #c5c1c1;
 }
+
+.modal-overlay-inside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+}
