--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/following/following.component.html
@@ -3,6 +3,9 @@
         margin-top:5%;
     }
 </style>
+<div class="modal-overlay-inside z-modal" *ngIf="isLoading">
+    <div class="loader"></div>
+</div>
 <div class="row row-fix">
     <div class="col-md-4 row-gap width-xs" *ngFor="let usr of user">
         <user-info [userObj]="usr"></user-info>
