--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/dashboard/viewprofile/viewprofile.component.html
@@ -10,6 +10,10 @@
             visibility: visible;
             color: #f6912b;
         }
+    .profile-info{
+        margin-top: -1px;
+        min-height:430px;
+    }
 
     .fa-li {
         position: static;
@@ -93,7 +97,7 @@
                 </ul>
             </div>
             <div class="col-md-9 border-top-grey">
-                <div id="profile-info" style="margin-top: -1px;">
+                <div id="profile-info" class="profile-info">
                     <!--tricks to hide question top border-->
                     <router-outlet></router-outlet>
                 </div>
