Project and learing component removed

--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/shared/status/status.component.html
@@ -50,7 +50,7 @@
                 <span></span>
                 <ul style="list-style-type: none;">
                     <li *ngIf="isQuestion" style="list-style-type: none;width: 91px;">
-                        <a (click)="questionDetailClicked()">Editar</a>
+                        <a (click)="questionEditClicked()">Editar</a>
                     </li>
                     <li style="list-style-type: none;">
                         <a (click)="bookmarkClicked(questionObj?.id)">Guardar<!--Bookmark--></a>
