--- a/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
+++ b/AltaPerspectiva/src/AltaPerspectiva.Web/tsScripts/app/questions/question-body/question-body.component.html
@@ -104,6 +104,12 @@
     </div>
     <br />
     <div class="row tags-container">
+        <div *ngIf="topFiveTopics?.length == 0">
+            <div class="tags">
+                <!--No topics for this category-->
+                No hay temas para esta catego- ria
+            </div>
+        </div>
         <div *ngIf="topFiveTopics?.length!=0">
             <div class="tags" *ngFor="let topic of topFiveTopics">
                 <a [routerLink]="['/question/home',topic?.categoryId,topic?.id,0]"> {{topic.topicName}}</a>
@@ -116,6 +122,7 @@
                 <a (click)="toggleShowMoreTopic()" *ngIf="!showMoreTopic"><!--Hide more-->Ocultar..</a>
             </div>
         </div>
+
     </div>
     <div class="filter-panel">
         <div class="read-question-button">
